--- a/Lectures/Lecture_6-post.ipynb
+++ b/Lectures/Lecture_6-post.ipynb
@@ -67,15 +67,26 @@
     "# Typically, we want to think of our data as being lists of the stuff in each column\n",
     "uc_schools = np.array([\"Berkeley\", \"San Diego\", \"Los Angeles\", \"Santa Barbara\", \"San Francisco\", \n",
     "                       \"Irvine\", \"Davis\", \"Riverside\", \"Santa Cruz\", \"Merced\"])\n",
-    "uc_founded = np.array([1868, 1960, 1919, 1909, 1864, 1965, 1905, 1954, 1965, 2005])\n",
-    "uc_students = np.array([45057, 42875, 45742, 26314, 3132, 35220, 40031, 25548, 19161, 8847])\n",
+    "uc_founded = [1868, 1960, 1919, 1909, 1864, 1965, 1905, 1954, 1965, 2005]\n",
+    "uc_students = pd.Series([45057, 42875, 45742, 26314, 3132, 35220, 40031, 25548, 19161, 8847])\n",
+    "uc_grads = np.zeros((10))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# Now let's put it in a dataframe!\n",
     "uc_data = pd.DataFrame({ # start by declaring a new data frame\n",
-    "    \"School\": uc_schools, # each column name is a dictionary key and the list of column data points is the value\n",
-    "    \"Date founded\": uc_founded,\n",
-    "    \"Number of students\": uc_students\n",
+    "    \"Campus\": uc_schools, # each column name is a dictionary key and the list of column data points is the value\n",
+    "    \"Date_founded\": uc_founded,\n",
+    "    \"Number_of_students\": uc_students,\n",
+    "#     \"grads\": uc_grads\n",
     "})\n",
     "\n",
     "uc_data"
@@ -121,8 +132,17 @@
    "outputs": [],
    "source": [
     "# One option: when we have new data to add\n",
-    "uc_undergrads = np.array([31814, 33343, 31543, 23349, 0, 30222, 31162, 22055, 17207, 8151])\n",
+    "uc_undergrads = pd.Series([33343, 31543, 23349, 0, 30222, 31162, 22055, 17207, 8151, 31814],\n",
+    "                         index = [\"San Diego\", \"Los Angeles\", \"Santa Barbara\", \"San Francisco\", \n",
+    "                       \"Irvine\", \"Davis\", \"Riverside\", \"Santa Cruz\", \"Merced\", \"Berkeley\"])\n",
     "\n",
+    "# uc_undergrads.index = [\"Berkeley\", \"San Diego\", \"Los Angeles\", \"Santa Barbara\", \"San Francisco\", \n",
+    "#                        \"Irvine\", \"Davis\", \"Riverside\", \"Santa Cruz\", \"Merced\"]\n",
+    "\n",
+    "uc_data.index = [\"Berkeley\", \"San Diego\", \"Los Angeles\", \"Santa Barbara\", \"San Francisco\", \n",
+    "                       \"Irvine\", \"Davis\", \"Riverside\", \"Santa Cruz\", \"Merced\"]\n",
+    "\n",
+    "# uc_undergrads\n",
     "uc_data['Undergraduates'] = uc_undergrads # Use bracket syntax to declare a new column\n",
     "\n",
     "uc_data"
@@ -137,10 +157,15 @@
    "source": [
     "# A second option: when we want to process existing data and form a new column\n",
     "\n",
-    "uc_data = uc_data.assign(Undergraduate_pct = uc_data['Undergraduates'] / uc_data['Number of students'])\n",
+    "uc_data = uc_data.assign(Undergraduate_pct = uc_data['Undergraduates'] / uc_data['Number_of_students'])\n",
+    "\n",
+    "# uc_data['Undergraduate_pct'] = uc_data['Undergraduates'] / uc_data['Number_of_students']\n",
     "\n",
     "uc_data # Note what happens if we don't do the re-assignment above\n",
     "\n",
+    "uc_data = uc_data.assign(Total = uc_data['Undergraduates']+ uc_data['Number_of_students'])\n",
+    "\n",
+    "uc_data\n",
     "# For this sort of processing, we can also use similar syntax to the above (try it yourself!)\n",
     "# but `assign` gives us some additional flexibility"
    ]
@@ -165,7 +190,7 @@
     "\n",
     "# First, we make our new row into a dataframe of its own, with matching columns\n",
     "uc_tahoe = pd.DataFrame({\n",
-    "    \"School\": [\"Lake Tahoe\"],\n",
+    "    \"Campus\": [\"Lake Tahoe\"],\n",
     "    \"Date founded\": [2022] # Note we don't need to know all the column info here\n",
     "})\n",
     "\n",
@@ -208,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uc_data = uc_data.sort_values('Date founded', ascending = True)\n",
+    "uc_data = uc_data.sort_values('Date_founded', ascending = True)\n",
     "uc_data\n",
     "\n",
     "# Note this doesn't change index at far left!"
@@ -221,8 +246,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(uc_data.max())\n",
-    "print(uc_data['Number of students'].min())"
+    "print(uc_data.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "714e0e02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(uc_data['Number_of_students'].min())"
    ]
   },
   {
@@ -256,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_3_students = uc_data.nlargest(3, 'Number of students')\n",
+    "top_3_students = uc_data.nlargest(3, 'Number_of_students')\n",
     "top_3_students"
    ]
   },
@@ -285,8 +319,16 @@
    "source": [
     "# Get quantiles of undergraduate sizes\n",
     "q = uc_data['Undergraduates'].quantile([0.25, 0.75])\n",
-    "q[0.75]\n",
-    "\n",
+    "q[0.75]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d1f4a54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Fetch uc_data rows where uc_data['Undergraduates'] is > the 75th percentile value above\n",
     "large_undergrads = uc_data[uc_data['Undergraduates'] > q[0.75]] \n",
     "large_undergrads"
@@ -355,10 +397,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = uc_data['Number of students'].quantile([0.80])\n",
+    "q = uc_data['Number_of_students'].quantile([0.2, 0.80])\n",
+    "# type(q)\n",
+    "# q.index\n",
+    "q[0.8]\n",
     "\n",
     "# What's going on here?\n",
-    "uc_data[uc_data['Number of students'] >= q[0.8]]['Undergraduates'].mean()"
+    "uc_data[uc_data['Number_of_students'] >= q[0.8]]['Undergraduates'].mean()\n",
+    "uc_data[uc_data['Number_of_students'] >= q[0.2]]['Undergraduates'].mean()\n",
+    "# uc_data[uc_data['Number_of_students'] >= q[0.4]]['Undergraduates'].mean()"
    ]
   },
   {
@@ -410,8 +457,25 @@
    "metadata": {},
    "source": [
     "Let's say we want to know which `Type 1` group has the most `HP` on average\n",
-    "[any guesses?]\n",
-    "\n",
+    "[any guesses?]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c583ef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First, what are we dealing with here?\n",
+    "pokemon['Type 1'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d329330",
+   "metadata": {},
+   "source": [
     "One solution: \n",
     "1. Look at each individual `Type 1` value in our data\n",
     "2. Then, one by one, filter the data to match each unique `Type 1` value\n",
@@ -527,7 +591,7 @@
    "id": "1ef1f599",
    "metadata": {},
    "source": [
-    "In each `Generation`, how many different `Type 1` and `Type 2` types are there?\n",
+    "In each `Generation`, how many different `Type 1` and `Type 2` types are there? (did they change across generations?)\n",
     "\n",
     "[HINT: use the `nunique` summary function]"
    ]
