--- a/Lectures/Lecture_5-post.ipynb
+++ b/Lectures/Lecture_5-post.ipynb
@@ -270,7 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mcd = pd.read_csv(\"../Datasets/mcd.csv\")"
+    "# mcd = pd.read_csv(\"../Datasets/mcd.csv\")\n",
+    "mcd = pd.read_csv(\"https://raw.githubusercontent.com/UCSD-CSS-002/ucsd-css-002.github.io/master/datasets/mcd-menu.csv\")"
    ]
   },
   {
