--- a/Lectures/Lecture_10-post.ipynb
+++ b/Lectures/Lecture_10-post.ipynb
@@ -64,7 +64,9 @@
    "id": "3db74a25",
    "metadata": {},
    "source": [
-    "...\n",
+    "- Null values (missing values)\n",
+    "- Duplicates \n",
+    "- Outliers ** \n",
     "\n"
    ]
   },
@@ -98,7 +100,18 @@
     "})\n",
     "\n",
     "df\n",
-    "# df[df.sample_int == 1]"
+    "\n",
+    "# df.sample_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0f53318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df.sample_int == 7]"
    ]
   },
   {
@@ -129,20 +142,25 @@
     "df.iloc[0] = np.nan\n",
     "df.iloc[1] = None\n",
     "\n",
-    "df # is this what we expected?\n"
+    "df # is this what we expected?\n",
+    "# df.sample_int\n",
+    "\n",
+    "# TODO why does the nan conver to floating point?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a97e5ade",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df['nans'] = np.nan\n",
     "df['nones'] = None\n",
     "\n",
-    "df"
+    "df\n"
    ]
   },
   {
@@ -206,16 +224,24 @@
     "\n",
     "df\n",
     "\n",
+    "np.median(df.sample_int) # uh oh...\n",
+    "# np.nanmedian(df.sample_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d617d7f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.mean(df.sample_int)\n",
     "\n",
-    "# np.sum(df.sample_int) / len(df.sample_int)\n",
+    "np.sum(df.sample_int) / len(df.sample_int)\n",
     "\n",
     "# len(df.sample_int)\n",
-    "# np.sum(df.sample_int) / 8\n",
-    "\n",
-    "\n",
-    "\n",
-    "np.median(df.sample_int) # uh oh...\n"
+    "np.sum(df.sample_int) / 8\n",
+    "\n"
    ]
   },
   {
@@ -250,11 +276,13 @@
    "outputs": [],
    "source": [
     "# Duplicates\n",
-    "\n",
+    "df\n",
     "df[df.duplicated()] # just show the info that's duplicated after the first occurrence\n",
     "\n",
-    "# df[df.duplicated(keep = False)] # show all duplicated rows\n",
-    "# df"
+    "df[df.duplicated(keep = False)] # show all duplicated rows\n",
+    "# df\n",
+    "\n",
+    "df[df['sample_int'].duplicated()] # can also apply to columns individually"
    ]
   },
   {
@@ -275,10 +303,13 @@
     "# Missing values\n",
     "\n",
     "# Pandas tools: `pd.isna` and `pd.isnull`\n",
-    "pd.isna(df['sample_int'])\n",
-    "df[pd.isna(df['sample_int'])]\n",
+    "# pd.isna(df['sample_int'])\n",
+    "df[pd.notna(df['sample_int'])]\n",
     "\n",
-    "df[pd.isnull(df['sample_int'])] # Note: this is the same as `pd.isna` above\n"
+    "df[pd.isnull(df['sample_int'])] # Note: this is the same as `pd.isna` above\n",
+    "\n",
+    "\n",
+    "# pd.isna(None)"
    ]
   },
   {
@@ -357,7 +388,11 @@
    "source": [
     "df_no_dupes = df.drop_duplicates(ignore_index = True) # Note: we need this `ignore_index = True`\n",
     "\n",
-    "df_no_dupes"
+    "# df_no_dupes = df.drop_duplicates().reset_index() # Note: we need this `ignore_index = True`\n",
+    "\n",
+    "df_no_dupes\n",
+    "\n",
+    "# df"
    ]
   },
   {
@@ -378,7 +413,11 @@
    "id": "8fd6279e",
    "metadata": {},
    "source": [
-    "**Dropping missing values**: why might we do that?"
+    "**Dropping missing values**: why might we do that?\n",
+    "\n",
+    "- If we only care about averages\n",
+    "- If the top priority is having integrity in our dataset, or if the missing data is for some reason that makes us okay ignoring it (e.g. broken logging process)\n",
+    "\n"
    ]
   },
   {
@@ -392,7 +431,9 @@
     "\n",
     "df_no_na = df.dropna() # can specify an `axis`: 0 for columns, 1 for rows containing missing values\n",
     "\n",
-    "df_no_na # What happened here??"
+    "df_no_na # What happened here??\n",
+    "\n",
+    "# df"
    ]
   },
   {
@@ -403,10 +444,14 @@
    "outputs": [],
    "source": [
     "df_no_na = df.dropna(how = \"all\") \n",
+    "# df_no_na = df.dropna(axis = 0) \n",
+    "\n",
     "# how = \"all\" will drop rows where *all* values are NaN\n",
     "# how = \"any\" (default) will drop rows where *any* column value is NaN\n",
     "\n",
-    "df_no_na # that's better"
+    "df_no_na # that's better\n",
+    "\n",
+    "# df['sample_int'].dropna()"
    ]
   },
   {
@@ -414,8 +459,22 @@
    "id": "27f986a6",
    "metadata": {},
    "source": [
-    "**Filling in missing values**: Why might we do that instead? (and what to put there?)"
+    "**Filling in missing values**: Why might we do that instead? (and what to put there?)\n",
+    "\n",
+    "- If you're averaging: put the average (median)\n",
+    "- If you want to transform your data or if the value is not useful as given\n",
+    "- If you can assume missing data is at worst no different from previous value\n",
+    "\n",
+    "..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2cc287",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -436,8 +495,8 @@
     "\n",
     "df_no_na = df.fillna(0) \n",
     "\n",
-    "# df_no_na = df.fillna(df.mean()) # note this can be handy\n",
-    "# df_no_na = df.fillna(np.nanmedian(df['sample_int'])) \n",
+    "df_no_na = df.fillna(df.mean()) # note this can be handy\n",
+    "df_no_na = df.fillna(np.nanmedian(df['sample_int'])) \n",
     "\n",
     "df_no_na\n"
    ]
@@ -455,7 +514,7 @@
     "\n",
     "df\n",
     "\n",
-    "df_no_na = df.fillna(method = 'pad',\n",
+    "df_no_na = df.fillna(method = 'pad', # alternative: 'bfill'\n",
     "                     limit = 1 # optional limit argument says how many consecutive times to do this\n",
     "                    )\n",
     "\n",
@@ -505,8 +564,8 @@
    "source": [
     "\n",
     "\n",
-    "np.std(df.sample_int) # can specify e.g., values > X standard deviations above the mean\n",
-    "thresh = np.mean(df.sample_int) + 3*np.std(df.sample_int)\n",
+    "# np.std(df.sample_int) # can specify e.g., values > X standard deviations above the mean\n",
+    "# thresh = np.mean(df.sample_int) + 3*np.std(df.sample_int)\n",
     "\n",
     "np.nanquantile(df.sample_int, [0.95]) # or, similarly, the top N% of data points\n",
     "thresh = np.nanquantile(df.sample_int, [0.95])[0]\n",
@@ -517,12 +576,6 @@
     "\n",
     "df_no_outliers"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b5d86853",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
