--- a/Lectures/Lecture_11-pre.ipynb
+++ b/Lectures/Lecture_11-pre.ipynb
@@ -753,7 +753,45 @@
    "id": "e4dcd1a9",
    "metadata": {},
    "source": [
-    "## Bonus: `stack` and `unstack`"
+    "## Bonus: `stack` and `unstack`\n",
+    "\n",
+    "A really clear overview [here](https://pandas.pydata.org/pandas-docs/stable/user_guide/reshaping.html#reshaping-by-stacking-and-unstacking)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b54e458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gap_stack = gap_wide.stack(\"country\")\n",
+    "\n",
+    "gap_stack\n",
+    "# gap_stack.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a8fd841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gap_stack['pop']\n",
+    "# gap_stack[gap_stack['year'] == 2007]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fa65821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gap_unstack = gap_stack.unstack(\"year\")\n",
+    "gap_unstack"
    ]
   }
  ],
