--- a/Lectures/Week4_Overview.ipynb
+++ b/Lectures/Week4_Overview.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "**Lecture 10:** *Data cleaning with python*\n",
     "\n",
-    "**Lecture 11:** \n",
+    "**Lecture 11:** *Tidy data*\n",
     "\n",
-    "**Lecture 12:** "
+    "**Lecture 12:** *Data transformations*"
    ]
   }
  ],
